# minimal-surface

./: .gitignore  AreaEikonal.cpp  AreaEikonal.h  CMakeLists.txt  ChildFrm.cpp  ChildView.cpp  ChildView.h  EstimatorWrapper.h  EventSource.h  FMSigned.cpp  FMSigned.h  FitPlane.cpp  FitPlane.h  ImageOp.cpp  ImageOp.h  IndexedPriorityQueue.h  MainFrm.cpp  MinArea.aps  MinArea.cpp  MinArea.h  MinArea.rc  MinArea.vcproj  MinArea.vcxproj  MinArea.vcxproj.filters  MinAreaPy.py  MinimalSurfaceEstimator.cpp  MinimalSurfaceEstimator.h  PlanePhaseField.cpp  PlanePhaseField.h  README.md  ReadMe.txt  Transport.cpp  Transport.h  Utils.cpp  Utils.h  commontype.h  pyproject.toml  pythonmodule.cpp  resource.h  setup.cfg  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.md
2save/: AreaEikonal.cpp  AreaEikonal.h
MinArea.dir/MinSizeRel/: MinArea.exe.recipe  MinArea.res  vc142.idb
MinArea.dir/MinSizeRel/MinArea.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MinArea.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
MinArea.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
res/: MinArea.rc2
src/minimal-surface/code/: _minimal_surface.cpp  _minimal_surface.pyx  pythonmodule_cpp_file  pythonmodule_h_file
x64/Debug/: MinArea.res
x64/Debug/MinArea.tlog/: MinArea.lastbuildstate  clang-cl.11348.delete.1.tlog  clang-cl.11348.write.1.tlog  clang-cl.11828.delete.1.tlog  clang-cl.11828.write.1.tlog  clang-cl.12724.delete.1.tlog  clang-cl.13860.delete.1.tlog  clang-cl.13888.delete.1.tlog  clang-cl.17072.delete.1.tlog  clang-cl.19828.delete.1.tlog  clang-cl.20412.delete.1.tlog  clang-cl.20808.delete.1.tlog  clang-cl.21048.delete.1.tlog  clang-cl.21156.delete.1.tlog  clang-cl.21356.delete.1.tlog  clang-cl.21544.delete.1.tlog  clang-cl.22272.delete.1.tlog  clang-cl.2360.delete.1.tlog  clang-cl.2632.delete.1.tlog  clang-cl.5904.delete.1.tlog  clang-cl.6936.delete.1.tlog  clang-cl.7956.delete.1.tlog  clang-cl.9480.delete.1.tlog  clang-cl.command.1.tlog  (+3 more)
x64/Release/: MinArea.exe.recipe  MinArea.ipdb  MinArea.res
(+53 files in other folders)
