[metadata]
name = minimal-surface
version = 0.0.1
author = David Bauer, Jozsef Molnar
author_email = dbauer@brc.hu

license = BSD-3-Clause
description = Surface estimation for 3D images from two given points.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: C
	Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/bauerdavid/minimal-surface/issues
    Documentation = https://github.com/bauerdavid/minimal-surface/blob/main/README.md
    Source Code = https://github.com/bauerdavid/minimal-surface
    User Support = https://github.com/bauerdavid/minimal-surface/issues


[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/


[options.packages.find]
where = src
